<resources>
    <string name="app_name">nac_final</string>
    <string name="salvar">Salvar</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="informe_seu_email">Informe seu email</string>
    <string name="excluir">Excluir</string>
    <string name="digite_sua_mensagem">Digite sua mensagem</string>
    <string name="mensagem_removida_com_sucesso">Mensagem removida com sucesso.</string>
    <string name="informe_os_campos">Informe corretamente os campos</string>
    <string name="mensagem_inserida">Mensagem inserida com sucesso.</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="id">id</string>
</resources>
