<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_seu_nome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_seu_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEmail"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_sua_mensagem"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/edtMsg"
        android:inputType="textLongMessage"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:onClick="salvar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        android:onClick="excluir"
        android:background="@color/vermelho"
        android:visibility="invisible"
        android:id="@+id/btnExcluir"/>

</LinearLayout>